Move `ProcessIsolation` convention values to `ProcessIsolation` factory function and limit metaspace memory (#4534)
If final users override just `maxHeapSize`, everything else will use preconfigured values.
If users need to modify `jvmArgs`, they can use `jvmArgs.set` to replace it or `jvmArgs.add` to append to it when creating a `ProcessIsolation` object. Which is most likely never needed.